modified:  Section Introduction added more details

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,10 @@
 \maketitle
 
 \section{Introduction}
+\subsection{Git}
+Git is a distributed version control system designed to track changes in source code during software development. It enables teams to collaborate efficiently, maintain a detailed history of changes, and manage multiple versions of a project simultaneously. Git is widely used in software development, research, and documentation projects.
+\subsection{LaTex}
+LaTeX is a typesetting system commonly used for creating structured and professional documents. It excels at producing high-quality outputs for academic papers, reports, and books. The combination of Git and LaTeX is particularly powerful for researchers and developers as it provides a robust framework for collaboration and version control while maintaining document integrity.
 
 
 \section{Git Workflow Steps}
