modified:  Section git workflow steps added more details

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,50 @@ LaTeX is a typesetting system commonly used for creating structured and professi
 
 
 \section{Git Workflow Steps}
+The Git workflow typically involves the following steps:
+\subsection{Initialize a Repository (git init):}
+\begin{itemize}
+    \item Command: git init
+\item This sets up a new Git repository in the current directory.
+\end{itemize}
+
+\subsection{Add Changes to Staging Area (git add):}
+\begin{itemize}
+    \item Command: git add <file>
+\item This stages changes to be included in the next commit.
+\end{itemize}
+\subsection{Commit Changes (git commit):}
+\begin{itemize}
+    \item Command: git commit -m "Commit message"
+\item This saves changes to the repository with a descriptive message.
+\end{itemize}
+\subsection{Check Repository Status (git status):}
+\begin{itemize}
+    \item Command: git status
+     \item Displays the current state of the repository, including staged and unstaged changes.
+\end{itemize}
+\subsection{View Commit History (git log):}
+\begin{itemize}
+    \item Command: git log
+\item Shows a detailed history of commits.
+\end{itemize}
+
+\subsection{Branching and Merging (git branch, git checkout, git merge):}
+\begin{itemize}
+    \item Create a branch: git branch <branch-name>
+\item Switch branches: git checkout <branch-name>
+ \item Merge branches: git merge <branch-name>
+\end{itemize}
+\subsection{
+Push Changes to Remote (git push):}
+\begin{itemize}
+    \item Command: git push origin main
+     \item Uploads local changes to a remote repository.
+\end{itemize}
+
+
+
+
 
 \section{Version Control of LaTeX Documents}
 
