--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,8 @@ Regularly merge changes to integrate contributions.
 
 
 \section{Summary}
+Git tracks changes, allowing users to revert to previous versions when necessary.Multiple contributors can work on the same project without conflicts.LaTeX ensures a professional and organized output, suitable for academic and technical writing.Git's detailed commit history provides insights into the evolution of the document.Proper version control ensures that all resources, such as images and bibliographies, are managed systematically.
+
 
 
 \end{document}
