Adding Git workflow Diagram

--- a/main.tex
+++ b/main.tex
@@ -85,11 +85,18 @@ Regularly merge changes to integrate contributions.
     \item Include meaningful commit messages to explain what each change addresses.
 \end{itemize}
 
-
-
 \section{Summary}
 Git tracks changes, allowing users to revert to previous versions when necessary.Multiple contributors can work on the same project without conflicts.LaTeX ensures a professional and organized output, suitable for academic and technical writing.Git's detailed commit history provides insights into the evolution of the document.Proper version control ensures that all resources, such as images and bibliographies, are managed systematically.
 
+\section{Git Workflow Diagram}
+The following diagram illustrates a typical Git workflow:
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{git_workflow.jpg}
+    \caption{Git Workflow Diagram}
+    \label{fig:git_workflow}
+\end{figure}
 
 
 \end{document}
