Git workflow Diagram

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{graphicx} % Required for inserting images
+\usepackage{amsmath} % For maths equations
 
 \title{Research Methods ASSIGNMENT NO 02 }
 \author{Alishba Fatima}
@@ -85,24 +86,33 @@ Regularly merge changes to integrate contributions.
     \item Include meaningful commit messages to explain what each change addresses.
 \end{itemize}
 
+
+
 \section{Summary}
 Git tracks changes, allowing users to revert to previous versions when necessary.Multiple contributors can work on the same project without conflicts.LaTeX ensures a professional and organized output, suitable for academic and technical writing.Git's detailed commit history provides insights into the evolution of the document.Proper version control ensures that all resources, such as images and bibliographies, are managed systematically.
 
+
+
+
 \section{Git Workflow Diagram}
-The following diagram illustrates a typical Git workflow:
+The following diagram illustrates a typical Git workflow:\\ 
 \begin{figure}[h]
-    \centering
-    \includegraphics[width=\textwidth]{git_workflow.jpg}
-    \caption{Git Workflow Diagram}
-    \label{fig:git_workflow}
+     \centering
+    \includegraphics[width=0.6\textwidth]{git_workflow.jpg}
+    \caption{workflow}
+    \label{fig:Figure 1}
 \end{figure}
 
 \section{Version Control of LaTeX Documents}
 Using LaTeX with Git involves managing commits effectively. Here is an example of a calculation:
-%\[
-%\text{Total Commits} = \text{Branches} \times \text{Commits Per Branch}%
-%\]
+\begin{equation}
+    \text{Total Commits} = \text{Branches} \times \text{Commits Per Branch}
+\end{equation}
 This formula helps estimate the number of commits made across all branches in a repository.
+
+
+
+%table
 \section{Table in LaTeX}
 \begin{table}[h]
 \centering
@@ -118,8 +128,4 @@ git log            & Show the commit history                          & \texttt{
 \caption{Git Commands and Their Usage}
 \label{tab:git-commands}
 \end{table}
-
-
-
-
 \end{document}
